--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,7 @@ zenstruck_form:
         tunnel_entity: true
         ajax_entity: true
         ajax_entity_controller: true
+        help: true
 
 framework:
     #esi:             ~
