--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -6,6 +6,12 @@ parameters:
     database_user:     root
     database_password: ~
 
+    rabbitmq_host:     localhost
+    rabbitmq_port:     5672
+    rabbitmq_user:     guest
+    rabbitmq_password: guest
+    rabbitmq_vhost:    ~
+
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
     mailer_user:       ~
