--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
         "jms/di-extra-bundle": "1.1.*",
         "kriswallsmith/assetic": "1.1.*@dev",
         "sensiolabs/security-checker": "dev-master",
+        "videlalvaro/php-amqplib": "dev-master",
+        "oldsound/rabbitmq-bundle": "dev-master",
 
         "zenstruck/form-bundle": "dev-master",
 
