--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+zenstruck_dashboard:
+    resource: "@ZenstruckDashboardBundle/Resources/config/routing.xml"
+    prefix:   /admin
+
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
