--- a/build.xml
+++ b/build.xml
@@ -4,11 +4,18 @@
 
     <target name="deploy" depends="
         remote.update,
+        remote.build_info,
         remote.vendors,
         remote.reset_db,
         remote.populate_db,
         remote.clear_cache"
     />
+
+    <target name="remote.build_info">
+        <exec executable="ssh" failonerror="true">
+            <arg line="${env.ssh_user}@${env.ssh_host} 'echo ${env.BUILD_NUMBER} > ${env.server_path}/.buildinfo'"/>
+        </exec>
+    </target>
 
     <target name="remote.update">
         <exec executable="ssh" failonerror="true">
