upgrade to symfony2.2, added esi/hinclude controller widgets

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -19,6 +19,7 @@ zenstruck_form:
 framework:
     esi:             ~
     #translator:      { fallback: "%locale%" }
+    fragments:       true
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
