--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
         {
             "type": "vcs",
             "url": "git@github.com:kbond/ZenstruckDashboardBundle.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:kbond/ZenstruckCacheBundle.git"
         }
     ],
     "require": {
@@ -29,11 +33,13 @@
         "jms/security-extra-bundle": "1.2.*",
         "jms/di-extra-bundle": "1.1.*",
         "kriswallsmith/assetic": "1.1.*@dev",
+
         "sensiolabs/security-checker": "dev-master",
         "nelmio/alice": "1.*",
 
         "zenstruck/dashboard-bundle": "dev-master",
-        "zenstruck/form-bundle": "dev-master"
+        "zenstruck/form-bundle": "dev-master",
+        "zenstruck/cache-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
