--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,4 @@
 {
-    "name": "symfony/framework-standard-edition",
-    "description": "The \"Symfony Standard Edition\" distribution",
     "autoload": {
         "psr-0": { "": "src/" }
     },
@@ -22,8 +20,8 @@
         "php": ">=5.3.3",
         "symfony/symfony": "2.2.*",
         "doctrine/orm": "~2.2,>=2.2.3",
-        "doctrine/doctrine-bundle": "1.2.*",
-        "twig/extensions": "1.0.*",
+        "doctrine/doctrine-bundle": "1.2.0-beta1",
+        "kriswallsmith/assetic": "1.1.0-alpha4",
         "symfony/assetic-bundle": "2.1.*",
         "symfony/swiftmailer-bundle": "2.2.*",
         "symfony/monolog-bundle": "2.2.*",
@@ -55,7 +53,6 @@
     "config": {
         "bin-dir": "bin"
     },
-    "minimum-stability": "alpha",
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web"
