--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
 
         "sensiolabs/security-checker": "dev-master",
         "nelmio/alice": "1.*",
+        "zendframework/zend-crypt": "~2.0,!=2.1.1",
 
         "zenstruck/dashboard-bundle": "dev-master",
         "zenstruck/form-bundle": "dev-master",
