--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "sensiolabs/security-checker": "dev-master",
         "nelmio/alice": "1.*",
         "zendframework/zend-crypt": "~2.0,!=2.1.1",
+        "incenteev/composer-parameter-handler": "~2.0",
 
         "zenstruck/dashboard-bundle": "dev-master",
         "zenstruck/form-bundle": "dev-master",
@@ -49,10 +50,12 @@
     },
     "scripts": {
         "post-install-cmd": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets"
         ],
         "post-update-cmd": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets"
         ]
@@ -62,6 +65,9 @@
     },
     "extra": {
         "symfony-app-dir": "app",
-        "symfony-web-dir": "web"
+        "symfony-web-dir": "web",
+        "incenteev-parameters": {
+            "file": "app/config/parameters.yml"
+        }
     }
 }
