--- a/src/Zenstruck/MediaBundle/composer.json
+++ b/src/Zenstruck/MediaBundle/composer.json
@@ -12,8 +12,7 @@
         }
     ],
     "require": {
-        "symfony/symfony": "~2.1",
-        "zenstruck/form-bundle": "~1.2"
+        "symfony/symfony": "~2.1"
     },
     "autoload": {
         "psr-0": { "Zenstruck\\MediaBundle": "" }
