--- a/src/Zenstruck/MediaBundle/composer.json
+++ b/src/Zenstruck/MediaBundle/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zenstruck/media-bundle",
-    "description": "Provides a simple media/file management GUI.",
+    "description": "Provides a simple media/file management GUI for Symfony2",
     "keywords": ["media", "file", "manager", "administration"],
     "homepage": "http://zenstruck.com/project/ZenstruckMediaBundle",
     "type": "symfony-bundle",
