--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,10 @@
         {
             "type": "vcs",
             "url": "git@github.com:kbond/ZenstruckSlugifyBundle.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:kbond/ZenstruckMediaBundle.git"
         }
     ],
     "require": {
@@ -46,7 +50,8 @@
         "zenstruck/dashboard-bundle": "dev-master",
         "zenstruck/form-bundle": "dev-master",
         "zenstruck/cache-bundle": "dev-master",
-        "zenstruck/slugify-bundle": "dev-master"
+        "zenstruck/slugify-bundle": "dev-master",
+        "zenstruck/media-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
