--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,13 +63,12 @@ assetic:
     debug:          "%kernel.debug%"
     use_controller: false
     bundles:        [ ]
-    #java: /usr/bin/java
     filters:
         cssrewrite: ~
-        #closure:
-        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
-        #yui_css:
-        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+        uglifyjs2:
+            bin: "%uglifyjs_path%"
+        uglifycss:
+            bin: "%uglifycss_path%"
 
 # Doctrine Configuration
 doctrine:
