--- a/app/config/dashboard.yml
+++ b/app/config/dashboard.yml
@@ -84,7 +84,7 @@ zenstruck_dashboard:
                 Article Admin:
                     route: article
                 Media Manager:
-                    route: zenstruck_media_list
+                    route: zenstruck_media_index
         Dropdown:
             items:
                 ZenstruckFormBundle:
