--- a/composer.json
+++ b/composer.json
@@ -38,14 +38,14 @@
         "sensio/distribution-bundle": "2.1.*",
         "sensio/framework-extra-bundle": "2.1.*",
         "sensio/generator-bundle": "2.1.*",
-        "jms/security-extra-bundle": "1.2.*",
-        "jms/di-extra-bundle": "1.1.*",
+        "jms/di-extra-bundle": "~1.3",
         "kriswallsmith/assetic": "1.1.*@dev",
 
         "sensiolabs/security-checker": "dev-master",
         "nelmio/alice": "1.*",
         "zendframework/zend-crypt": "~2.0,!=2.1.1",
         "incenteev/composer-parameter-handler": "~2.0",
+        "jms/serializer-bundle": "~0.11",
 
         "zenstruck/dashboard-bundle": "dev-master",
         "zenstruck/form-bundle": "dev-master",
