--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "jquery": "~1.9",
     "hinclude": "git://github.com/mnot/hinclude.git#0.9.5",
     "bootstrap": "2.3.1",
-    "fancybox": "2.1.4"
+    "fancybox": "2.1.4",
+    "ngUpload": "~0.3.4"
   }
 }
