--- a/app/config/fixtures.yml
+++ b/app/config/fixtures.yml
@@ -10,6 +10,7 @@ Sandbox\AppBundle\Entity\Article:
     post{1..10}:
         title: <text(100)>
         body: <text(500)>
+        cost: <randomFloat(1, 0, 100.00)>
         author: @user*
         editor: @user*
         tags: <numberBetween(0, 3)>x @tag*
