--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,6 @@
         },
         {
             "type": "vcs",
-            "url": "git@github.com:kbond/ZenstruckCacheBundle.git"
-        },
-        {
-            "type": "vcs",
             "url": "git@github.com:kbond/ZenstruckSlugifyBundle.git"
         },
         {
@@ -28,22 +24,22 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.1.*",
+        "symfony/symfony": "2.3.*",
         "doctrine/orm": ">=2.2.3,<2.4-dev",
-        "doctrine/doctrine-bundle": "1.1.*",
-        "twig/extensions": "1.0.*@dev",
-        "symfony/assetic-bundle": "~2.3",
-        "symfony/swiftmailer-bundle": "2.1.*",
-        "symfony/monolog-bundle": "2.1.*",
-        "sensio/distribution-bundle": "2.1.*",
-        "sensio/framework-extra-bundle": "2.1.*",
-        "sensio/generator-bundle": "2.1.*",
+        "doctrine/doctrine-bundle": "1.2.*",
+        "twig/extensions": "1.0.*",
+        "symfony/assetic-bundle": "2.3.*",
+        "symfony/swiftmailer-bundle": "2.3.*",
+        "symfony/monolog-bundle": "2.3.*",
+        "sensio/distribution-bundle": "2.3.*",
+        "sensio/framework-extra-bundle": "2.3.*",
+        "sensio/generator-bundle": "2.3.*",
+        "incenteev/composer-parameter-handler": "~2.0",
         "jms/di-extra-bundle": "~1.3",
 
         "sensiolabs/security-checker": "dev-master",
         "nelmio/alice": "1.*",
         "zendframework/zend-crypt": "~2.0,!=2.1.1",
-        "incenteev/composer-parameter-handler": "~2.0",
         "jms/serializer-bundle": "~0.11",
         "igorw/file-serve-bundle": "~1.0",
 
