--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,10 @@
         {
             "type": "vcs",
             "url": "git@github.com:kbond/ZenstruckMediaBundle.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:kbond/ZenstruckResourceBundle.git"
         }
     ],
     "require": {
@@ -53,7 +57,7 @@
 
         "zenstruck/dashboard-bundle": "dev-master",
         "zenstruck/form-bundle": "dev-master",
-        "zenstruck/cache-bundle": "dev-master",
+        "zenstruck/resource-bundle": "dev-master",
         "zenstruck/slugify-bundle": "dev-master",
         "zenstruck/media-bundle": "dev-master"
     },
