--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,10 @@
         {
             "type": "vcs",
             "url": "git@github.com:kbond/ZenstruckResourceBundle.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:kbond/ZenstruckDataGridBundle.git"
         }
     ],
     "require": {
@@ -48,6 +52,7 @@
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
         "jms/di-extra-bundle": "~1.3",
+        "white-october/pagerfanta-bundle": "~1.0",
 
         "sensiolabs/security-checker": "dev-master",
         "nelmio/alice": "1.*",
@@ -59,7 +64,8 @@
         "zenstruck/form-bundle": "dev-master",
         "zenstruck/resource-bundle": "dev-master",
         "zenstruck/slugify-bundle": "dev-master",
-        "zenstruck/media-bundle": "dev-master"
+        "zenstruck/media-bundle": "dev-master",
+        "zenstruck/datagrid-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
