added some additional datagrid fields

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -22,6 +22,9 @@ zenstruck_resource:
                 fields:
                     title:
                         sortable: true
+                    author: ~
+                    cost:
+                        sortable: true
                     date:
                         format: 'Y-m-d'
                         sortable: true
