upgrade dashboard-bundle

--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,14 @@
 {
+  "name": "sandbox",
   "dependencies": {
     "select2": "~3.3.0",
-    "jquery": "~1.9",
+    "jquery": "~1.10",
     "hinclude": "git://github.com/mnot/hinclude.git#0.9.5",
     "bootstrap": "2.3.1",
     "fancybox": "2.1.4",
     "ngUpload": "~0.3.4"
+  },
+  "resolutions": {
+    "jquery": "~1.10"
   }
 }
