form-bundle => bootstrap3

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -76,7 +76,7 @@ twig:
     strict_variables: "%kernel.debug%"
     form:
         resources:
-            - 'ZenstruckFormBundle:Twitter:form_bootstrap_layout.html.twig'
+            - 'ZenstruckFormBundle:Twitter:form_bootstrap3_layout.html.twig'
             - 'ZenstruckMediaBundle:Twitter:form_media_type.html.twig'
 
 # Assetic Configuration
