--- a/composer.json
+++ b/composer.json
@@ -40,25 +40,24 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.3.*",
-        "doctrine/orm": ">=2.2.3,<2.4-dev",
-        "doctrine/doctrine-bundle": "1.2.*",
-        "twig/extensions": "1.0.*",
-        "symfony/assetic-bundle": "2.3.*",
-        "symfony/swiftmailer-bundle": "2.3.*",
-        "symfony/monolog-bundle": "2.3.*",
-        "sensio/distribution-bundle": "2.3.*",
-        "sensio/framework-extra-bundle": "2.3.*",
-        "sensio/generator-bundle": "2.3.*",
+        "symfony/symfony": "~2.4",
+        "doctrine/orm": "~2.2,>=2.2.3",
+        "doctrine/doctrine-bundle": "~1.2",
+        "twig/extensions": "~1.0",
+        "symfony/assetic-bundle": "~2.3",
+        "symfony/swiftmailer-bundle": "~2.3",
+        "symfony/monolog-bundle": "~2.4",
+        "sensio/distribution-bundle": "~2.3",
+        "sensio/framework-extra-bundle": "~3.0",
+        "sensio/generator-bundle": "~2.3",
         "incenteev/composer-parameter-handler": "~2.0",
-        "jms/di-extra-bundle": "~1.3",
-        "white-october/pagerfanta-bundle": "~1.0",
 
-        "sensiolabs/security-checker": "dev-master",
-        "nelmio/alice": "1.*",
-        "zendframework/zend-crypt": "~2.0,!=2.1.1",
-        "jms/serializer-bundle": "~0.11",
-        "igorw/file-serve-bundle": "~1.0",
+        "jms/di-extra-bundle"               : "~1.3",
+        "white-october/pagerfanta-bundle"   : "~1.0",
+        "nelmio/alice"                      : "~1.0",
+        "zendframework/zend-crypt"          : "~2.0,!=2.1.1",
+        "jms/serializer-bundle"             : "~0.11",
+        "igorw/file-serve-bundle"           : "~1.0",
 
         "zenstruck/dashboard-bundle": "dev-master",
         "zenstruck/form-bundle": "dev-master",
