--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,6 @@
         },
         {
             "type": "vcs",
-            "url": "git@github.com:kbond/ZenstruckSlugifyBundle.git"
-        },
-        {
-            "type": "vcs",
             "url": "git@github.com:kbond/ZenstruckMediaBundle.git"
         },
         {
@@ -58,11 +54,11 @@
         "zendframework/zend-crypt"          : "~2.0,!=2.1.1",
         "jms/serializer-bundle"             : "~0.11",
         "igorw/file-serve-bundle"           : "~1.0",
+        "cocur/slugify"                     : "~0.8",
 
         "zenstruck/dashboard-bundle": "dev-master",
         "zenstruck/form-bundle": "dev-master",
         "zenstruck/resource-bundle": "dev-master",
-        "zenstruck/slugify-bundle": "dev-master",
         "zenstruck/media-bundle": "dev-master",
         "zenstruck/datagrid-bundle": "dev-master"
     },
